# multiTasking-window-notifier

./: .gitignore  AddonBestPractices.md  AddonDevGuide.md  CLAUDE.md  IMPROVEMENTS.md  build.py  feedback.md  manifest.ini  nvda_api_reference.md  pyproject.toml  test_concurrent_beep.py
.claude/: last-review.txt  settings.json  settings.local.json
.claude/hooks/: check_nvda_review.py
docs/: refactoring-phase12-lessons.md  smoke-test.md
docs/reviews/: code-review-6senior-2026-04-20.md
globalPlugins/multiTaskingWindowNotifier/: __init__.py  app.list  appIdentity.py  appListStore.py  beepPlayer.py  constants.py  eventRouter.py  focusDispatcher.py  foregroundWatcher.py  listDialog.py  lookupIndex.py  matcher.py  nameChangeWatcher.py  presets.py  scripts.py  settings.py  settingsPanel.py  store.py  switchFlusher.py  synthEngine.py  tabClasses.py  windowInfo.py
tests/: conftest.py  test_appIdentity.py  test_appIdentity_module_handler.py  test_appListStore_basic.py  test_appListStore_scope.py  test_beep_pair.py  test_constants.py  test_distance_assign.py  test_event_simulation.py  test_focus_dispatcher.py  test_globalPlugin_boot.py  test_listDialog_logic.py  test_lookup_rebuild.py  test_match_priority.py  test_matcher_alias_scope.py  test_migration_v4.py  test_name_change_watcher.py  test_normalize_title.py  test_performance.py  test_scripts_alias.py  test_settingsPanel_logic.py  test_settings_defaults.py  test_store_move_item.py  test_store_package.py  test_tabClasses.py  test_tutorial_state.py  test_windowInfo.py  test_window_enum.py
(+16 files in other folders)
